--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     </head>
     <body>
-        <div id="launch" class="mainstyle"> <!-- Holds the start screen -->
+        <div id="launcher" class="mainstyle"> <!-- Holds the start screen -->
             Participant Number: <input id="usernum" class = "launch">
             <p class="breakline"></p>
             Experiment: <input id="expnum" class = "launch">
