Finish practice mode

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Experiment: <input id="expnum" class = "launch">
             <p class="breakline"></p>
             <input id="start" type="button" class ="startbut" value="Start">
-            <input id="starttrial" type="button" class="startbut" value="Trial">
+            <input id="starttrial" type="button" class="startbut" value="Practice">
         </div>
         <div id="main">
             <table id="subtasklayout" role="presentation">
